results/SVCOMP/conversational/log-uninitialised1-2024_03_18_00_13_30.txt
class Main {
    //@ ensures \result ==> \result == (new int[10])[3] == 0;
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: incomparable types: boolean and int
    //@ ensures \result ==> \result == (new int[10])[3] == 0;
                                    ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: incomparable types: boolean and int
    //@ ensures \result ==> \result == (new int[10])[3] == 0;
                                                        ^
2 errors

class Main {
    //@ ensures \result == ((new int[10])[3] == 0);
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
        return i[3] == 0;
        ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
    //@ ensures \result == ((new int[10])[3] == 0);
        ^
2 verification failures

class Main {
    //@ ensures \result == (new int[10])[3] == 0;
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: incomparable types: boolean and int
    //@ ensures \result == (new int[10])[3] == 0;
                        ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: incomparable types: boolean and int
    //@ ensures \result == (new int[10])[3] == 0;
                                            ^
2 errors

class Main {
    //@ ensures \result == ((new int[10])[3] == 0);
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
        return i[3] == 0;
        ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
    //@ ensures \result == ((new int[10])[3] == 0);
        ^
2 verification failures

class Main {
    //@ ensures \result == (new int[10])[3] == 0;
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: incomparable types: boolean and int
    //@ ensures \result == (new int[10])[3] == 0;
                        ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: incomparable types: boolean and int
    //@ ensures \result == (new int[10])[3] == 0;
                                            ^
2 errors

class Main {
    //@ ensures \result == ((new int[10])[3] == 0);
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
        return i[3] == 0;
        ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
    //@ ensures \result == ((new int[10])[3] == 0);
        ^
2 verification failures

class Main {
    //@ ensures \result == (new int[10])[3] == 0;
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: incomparable types: boolean and int
    //@ ensures \result == (new int[10])[3] == 0;
                        ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: incomparable types: boolean and int
    //@ ensures \result == (new int[10])[3] == 0;
                                            ^
2 errors

class Main {
    //@ ensures \result == ((new int[10])[3] == 0);
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
        return i[3] == 0;
        ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
    //@ ensures \result == ((new int[10])[3] == 0);
        ^
2 verification failures

class Main {
    //@ ensures \result == (new int[10])[3] == 0;
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: incomparable types: boolean and int
    //@ ensures \result == (new int[10])[3] == 0;
                        ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: error: incomparable types: boolean and int
    //@ ensures \result == (new int[10])[3] == 0;
                                            ^
2 errors

class Main {
    //@ ensures \result == ((new int[10])[3] == 0);
    public static boolean f() {
        int i[] = new int[10];
        return i[3] == 0;
    }
}
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:5: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:2:) in method f
        return i[3] == 0;
        ^
/home/max/Documents/JMLGPT/tmp/uninitialised1.java:2: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/uninitialised1.java:5:
    //@ ensures \result == ((new int[10])[3] == 0);
        ^
2 verification failures

